<resources>
    <string name="app_name">Pokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_name" />
    <string name="pokemon_sprite">sprite of the pokemon</string>
    <string name="pokemon_detail_title"> Pokemon details</string>
    <string name="EV">Effort Value</string>
    <string name="BaseStat">Base Stat</string>
    <string name="StatName">Statistic name</string>
    <string name="home_list_pokemon_button">List of all pokemon</string>
    <string name="home_list_pokemon_by_region_button">List of pokemon by region</string>
    <string name="go_to_previous_pokemon">go to previous pokemon</string>
    <string name="go_to_next_pokemon">Go to next pokemon</string>
    <string name="search_bar_hint">Search a pokemon name</string>
</resources>