<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/pokeball_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/pokeball"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/home_title"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pokeball_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/home_list_pokemon_button"
        android:layout_width="300dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/home_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:text="@string/home_list_pokemon_button"
        />
    <Button
        android:id="@+id/home_list_pokemon_by_region_button"
        android:layout_width="300dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/home_list_pokemon_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/home_list_pokemon_by_region_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>