<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PokemonDetail"
    android:id="@+id/pokemonDetail_container">
    <ScrollView android:id="@+id/myScrollView" android:layout_height="match_parent" android:layout_width="match_parent"
        tools:ignore="UselessParent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/pokemonDetail_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/pokemon_sprite" />

    <TextView
        android:id="@id/pokemonDetail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pokemonDetail_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@id/pokemonDetail_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonDetail_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@id/pokemonDetail_physicalAttributes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonDetail_types"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <include
        layout="@layout/stat_header"
        android:id="@id/stat_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pokemonDetail_physicalAttributes"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@id/pokemonDetail_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stat_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/previous_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:visibility="gone"
        >
    <ImageView
        android:id="@+id/previous_arrow"
        android:contentDescription="@string/go_to_previous_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_keyboard_arrow_left_24" />
        <TextView
            android:id="@+id/previous_pokemon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/next_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/next_arrow"
            android:contentDescription="@string/go_to_next_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_keyboard_arrow_right_24"
            android:layout_gravity="right"
            />
        <TextView
            android:id="@+id/next_pokemon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>